domain helper: use URL class